--- a/asset/style/style.css
+++ b/asset/style/style.css
@@ -2,6 +2,9 @@
 :root{
 
 }
+a{
+    text-decoration: none;
+}
 header{
     display: flex;
     align-items: center;
@@ -26,4 +29,12 @@ header div{
 .btn-login:hover{
     color: white;
     background-color: black;
+}
+section{
+    min-height: 100vh;
+    width: 100%;
+}
+.hero{
+    width: 95%;
+    border-radius: 15px;
 }
