--- a/asset/style/style.css
+++ b/asset/style/style.css
@@ -1,9 +1,16 @@
 /*                                HEADER                               */
 :root{
-
+    --color1: hsl(0, 0%, 0%) ;
+    --color2: hsl(0, 0%, 24%) ;
+    --color3: hsl(0, 0%, 52%) ;
+    --color4: hsl(0, 0%, 82%) ;
+    --color5: hsl(0, 0%, 98%) ;
+    --color6: hsl(0, 100%, 100%) ;
 }
 a{
     text-decoration: none;
+    color: black ;
+    font-size: 1em;
 }
 header{
     display: flex;
@@ -19,7 +26,7 @@ header div{
 }
 .btn-login{
     background-color: transparent;
-    border: 1px solid black;
+    border: 1px solid var(--color1);
     width: 70px;
     font-size: 1em;
     border-radius: 15px;
@@ -28,13 +35,14 @@ header div{
 }
 .btn-login:hover{
     color: white;
-    background-color: black;
+    background-color: var(--color1);
 }
 section{
-    min-height: 100vh;
+    min-height: 90vh;
     width: 100%;
 }
 .hero{
-    width: 95%;
+    
     border-radius: 15px;
+    background-color: var(--color4);
 }
