--- a/asset/style/style.css
+++ b/asset/style/style.css
@@ -6,6 +6,23 @@
     --color4: hsl(0, 0%, 82%) ;
     --color5: hsl(0, 0%, 98%) ;
     --color6: hsl(0, 100%, 100%) ;
+
+
+    /*Radius*/
+    --radius1: 15px;
+    --radius2: 25px;
+}
+.row{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+}
+.column{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
 }
 a{
     text-decoration: none;
@@ -38,11 +55,26 @@ header div{
     background-color: var(--color1);
 }
 section{
-    min-height: 90vh;
+    min-height: 100vh;
     width: 100%;
+    justify-content: s;
 }
 .hero{
-    
-    border-radius: 15px;
+    height: 100vh;
+    border-radius: var(--radius1);
     background-color: var(--color4);
+}
+
+
+
+
+/*Admin Panel*/
+.Add-product{
+    width: 50%;
+    gap: 15px;
+    border-radius: var(--radius1);
+    background-color: var(--color4);
+}
+.Add-product-section{
+    justify-content: space-around; 
 }
