add pictures to database

--- a/asset/style/style.css
+++ b/asset/style/style.css
@@ -12,6 +12,9 @@
     --radius1: 15px;
     --radius2: 25px;
 }
+body{
+    background-color: var(--color4);
+}
 .row{
     display: flex;
     flex-direction: row;
@@ -62,7 +65,7 @@ section{
 .hero{
     height: 100vh;
     border-radius: var(--radius1);
-    background-color: var(--color4);
+    background-color: var(--color5);
 }
 
 
@@ -73,7 +76,7 @@ section{
     width: 50%;
     gap: 15px;
     border-radius: var(--radius1);
-    background-color: var(--color4);
+    background-color: var(--color5);
 }
 .Add-product-section{
     justify-content: space-around; 
