--- a/asset/style/style.css
+++ b/asset/style/style.css
@@ -86,6 +86,9 @@ section{
 .Add-product-section{
     justify-content: space-around; 
 }
+.evenly{
+    justify-content: space-evenly;
+}
 .product-grid{
     display: grid;
     grid-template-columns: repeat(5,120px);
