--- a/asset/style/style.css
+++ b/asset/style/style.css
@@ -67,17 +67,23 @@ header div{
     color: white;
     background-color: var(--color1);
 }
+.hero{
+    background-position: center;
+    background-size: cover;
+    height: 90vh;
+    border-radius: var(--radius1);
+    background-color: var(--color4);
+        display: flex;
+    justify-content: center;
+    align-items: center;
+}
 section{
     min-height: 100vh;
     width: 100%;
     display: flex;
     justify-content: center;
 }
-.hero{
-    height: 100vh;
-    border-radius: var(--radius1);
-    background-color: var(--color4);
-}
+
 
 /*Admin Panel*/
 
