--- a/asset/style/style.css
+++ b/asset/style/style.css
@@ -67,6 +67,13 @@ header div{
     color: white;
     background-color: var(--color1);
 }
+section{
+    min-height: 100vh;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+}
+/* HERO */
 .hero{
     background-position: center;
     background-size: cover;
@@ -77,13 +84,22 @@ header div{
     justify-content: center;
     align-items: center;
 }
-section{
-    min-height: 100vh;
-    width: 100%;
-    display: flex;
-    justify-content: center;
-}
 
+.hero-text{
+    width: 40%;
+    background: rgba(255, 255, 255, 0.1);
+    border-radius: 16px;
+    border: 1px solid rgba(255, 255, 255, 0.3);
+    backdrop-filter: blur(10px);
+    text-align: center;
+    box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+    padding: 20px;
+}
+.hero-text p{
+    font-size: 2em;
+    color: var(--color5);
+    margin: 0;
+}
 
 /*Admin Panel*/
 
