--- a/asset/style/style.css
+++ b/asset/style/style.css
@@ -75,17 +75,31 @@ section{
 }
 /* HERO */
 .hero{
-    background-position: center;
-    background-size: cover;
+    position: relative;
+
     height: 90vh;
     border-radius: var(--radius1);
-    background-color: var(--color4);
     display: flex;
     justify-content: center;
     align-items: center;
-    filter: brightness(0.7);
+    
+    overflow: hidden;
 }
+.hero_img{
+    background-position: center;
+    background-size: cover;
+    width: 100%;
+    height: 100%;    
+    position: absolute;
+    z-index: -1;
+    filter: brightness(0.5);
+}
+.hero_img img{
+    width: 100%;
+    height: 90vh;
+    
 
+}
 .hero-text{
     width: 40%;
     background: rgba(255, 255, 255, 0.1);
@@ -95,6 +109,8 @@ section{
     text-align: center;
     box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
     padding: 20px;
+    position: absolute;
+    z-index: 1;
 }
 .hero-text p{
     font-size: 2em;
@@ -271,4 +287,34 @@ display: none;
 }
 .action_box_btn:hover{
     color: var(--color1);
+}
+
+/*Product_card2*/
+.product_card2{
+    position :relative;
+    display: flex;
+    flex-direction:column;
+    align-items: center;
+    justify-content: center;
+    padding: 10px;
+    width: fit-content;
+    height: 265px;
+    background-color: var(--color6) ;
+    border: 1px solid var(--color5);
+    border-radius: var(--radius1);
+}
+.id_circle2{
+    position: absolute;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    top: -10px;
+    left: 90%;
+    width: 30px;
+    height: 30px;
+    font-size: 1.5em;
+    border-radius:50%;
+    color: var(--color2);
+    background-color: var(--color6);
+    border: 1px solid var(--color3);
 }
