--- a/asset/style/style.css
+++ b/asset/style/style.css
@@ -22,7 +22,7 @@
     flex-direction: row;
     align-items: center;
     justify-content: center;
-    gap: 15px;
+    
 }
 .column{
     display: flex;
@@ -296,12 +296,13 @@ display: none;
     flex-direction:column;
     align-items: center;
     justify-content: center;
-    padding: 10px;
+    padding: 10px 20px;
     width: fit-content;
     height: 265px;
     background-color: var(--color6) ;
     border: 1px solid var(--color5);
     border-radius: var(--radius1);
+    margin: 25px;
 }
 .id_circle2{
     cursor: pointer;
@@ -326,4 +327,7 @@ display: none;
     color: var(--color2);
     font-size: 1.3em;
     background-color: transparent;
+}
+.container_product{
+    gap: 15px;
 }
