--- a/asset/style/style2.css
+++ b/asset/style/style2.css
@@ -1,6 +1,6 @@
 .product_img_container{
     height: 70vh;
-    width: 50%;
+    width: 40%;
     overflow: hidden;
 }
 .product_img{
@@ -10,8 +10,12 @@
 }
 .product_description{
     height: 71vh;
-    width:50%;
+    width:30%;
     background-color: var(--color7);
     margin-left: -5%;
     align-items: start;
+}
+.product_name{
+    font-weight: 600;
+    font-size: 3em;
 }
