--- a/asset/style/style.css
+++ b/asset/style/style.css
@@ -73,7 +73,7 @@ header div{
 section{
     margin: 25px;
     min-height: 100vh;
-    width: 100%;
+    max-width: 100vw;
     display: flex;
     justify-content: center;
     align-items: center;
