--- a/asset/style/style.css
+++ b/asset/style/style.css
@@ -276,8 +276,8 @@ display: none;
     font-weight: 800;
 }
 .box_img{
-    width: 100px;
-    height: auto;
+    width: auto;
+    height: 90px;
 }
 .info_box p{
     text-align: center;
