--- a/asset/style/style2.css
+++ b/asset/style/style2.css
@@ -64,10 +64,29 @@
     width: 100%;
     gap: 15px;
 }
+.cart_container{
+   width:100%;
+}
 .buying_action select{
     width: 70%;
     background-color: var(--color6);
     height: 25px;
     max-height: 90px;
     border-radius: 5px;
+}
+.cart_img{
+    height:40vh;
+    width: auto;
+    border-radius: 10px;
+}
+.info_side{
+    width: 20%;
+    height: 100%;
+    align-items: start;
+    justify-content: flex-start;
+    padding: 15px;
+}
+.cart_box{
+    width: 80%;
+    height: 40vh;
 }
