--- a/asset/style/style2.css
+++ b/asset/style/style2.css
@@ -65,8 +65,9 @@
     gap: 15px;
 }
 .cart_container{
-   width:100%;
+   width:70%;
    gap: 5px;
+   border: 1px solid black;
 }
 .buying_action select{
     width: 70%;
