--- a/asset/style/style2.css
+++ b/asset/style/style2.css
@@ -64,10 +64,14 @@
     width: 100%;
     gap: 15px;
 }
+.cart{
+    align-items: start;
+}
 .cart_container{
-   width:70%;
+   width:50%;
    gap: 5px;
-   border: 1px solid black;
+   border: 2px solid var(--color4);
+   border-radius: 15px;
 }
 .buying_action select{
     width: 70%;
@@ -85,7 +89,7 @@
     border-radius: 10px;
 }
 .info_side{
-    width: 20%;
+    width: 30%;
     height: 100%;
     align-items: start;
     justify-content: flex-start;
@@ -94,6 +98,17 @@
 }
 .cart_box{
     width: 80%;
-    height: 40vh;
-    
+    height: 40vh; 
+    margin-bottom: 20px;
+}
+.total_container{
+    width: 30%;
+    height: 30vh;
+    border: 2px solid var(--color4);
+    border-radius: 15px;
+}
+.info_side_box{
+    width: 100%;
+    gap: 10px;
+    justify-content: space-evenly;
 }
