--- a/asset/style/style.css
+++ b/asset/style/style.css
@@ -65,17 +65,19 @@ header div{
     font-size: 1.5em;
 }
 .btn-login{
+    position: relative;
     background-color: transparent;
-    border: 1px solid var(--color1);
-    width: 70px;
-    font-size: 1em;
+    border: none;
+    font-size: 1.2em;
     border-radius: 15px;
     font-family: "Montserrat";
     transition: 0.5s ease-in-out;
 }
+.btn-login i{
+   font-size: 1.3em; 
+}
 .btn-login:hover{
-    color: white;
-    background-color: var(--color1);
+    color: var(--color3);
 }
 section{
     margin: 25px;
