--- a/asset/style/style2.css
+++ b/asset/style/style2.css
@@ -64,8 +64,39 @@
     width: 100%;
     gap: 15px;
 }
+.form_buying_action{
+   height: 100%;
+   width: 100%;
+   justify-content: flex-start;
+   gap: 25px;
+}
+.Toconnect_btn{
+    font-family: 'Nunito';
+    border: 1px solid var(--color3);
+    padding: 7px 10px;
+    border-radius: 20px;
+}
+.Toconnect_btn:hover{
+    background-color: var(--color3);
+    color: var(--color6);
+    transition: 0.5s ease-in-out;
+}
+ 
+/*                       CART                           */
 .cart{
     align-items: start;
+}
+.cart_number{
+    position: absolute;
+    width: 15px;
+    height: 15px; 
+    background-color: var(--color7);
+    border-radius: 50%;
+    left: 60%;
+    top: 0%;
+    color: var(--color1);
+    text-align: center;
+    font-size: 0.6em;
 }
 .cart_container{
    width:50%;
