--- a/asset/style/style2.css
+++ b/asset/style/style2.css
@@ -96,7 +96,7 @@
     top: 0%;
     color: var(--color1);
     text-align: center;
-    font-size: 0.6em;
+    font-size: 0.7em;
 }
 .cart_container{
    width:50%;
@@ -134,9 +134,11 @@
 }
 .total_container{
     width: 30%;
-    height: 30vh;
+    height: 40vh;
     border: 2px solid var(--color4);
     border-radius: 15px;
+    justify-content: center;
+    
 }
 .info_side_box{
     width: 100%;
