--- a/asset/style/style.css
+++ b/asset/style/style.css
@@ -43,7 +43,7 @@ a{
     color: inherit ;
     font-size: 1em;
 }
-p,label,input,button{
+p,label,input,button,textarea{
   font-family: 'Nunito';
 }
 button{
