--- a/asset/style/style.css
+++ b/asset/style/style.css
@@ -316,9 +316,9 @@ display: none;
     align-items: center;
     justify-content: center;
     padding: 10px 20px;
-    width: fit-content;
+    min-width: 120px;
     height: 265px;
-    background-color: var(--color6) ;
+    background-color: var(--color7) ;
     border: 1px solid var(--color5);
     border-radius: var(--radius1);
     margin: 25px;
@@ -357,9 +357,20 @@ display: none;
 .container_product{
     position: relative;
     gap: 15px;
+    justify-content: start;
+    width: 99vw;
     padding: 25px;
     height: fit-content;
     overflow-x: scroll;
+}
+.container_product > *:last-child {
+    margin-right: 60px;
+}
+.container_product > *:first-child {
+    margin-left: 40px;
+}
+.container_product::-webkit-scrollbar { 
+  display: none;            /* Chrome, Safari, Opera */
 }
 .Category{
     font-size: 2em;
@@ -367,3 +378,5 @@ display: none;
 .section_product{
     gap: 25px;
 }
+
+/*                                  RESPONSIVE                             */
